Update cloudinary functionality and Fix Question and User Create Endpoint