@@ -12,22 +12,29 @@ import jakarta.persistence.EntityNotFoundException;
 import org.modelmapper.ModelMapper;
 import org.springframework.stereotype.Service;
 
+import java.io.IOException;
+import java.time.LocalDateTime;
+import java.time.ZoneId;
 import java.util.List;
+import java.util.stream.Collectors;
 
 @Service
 public class QuestionService {
 
     private final QuestionRepository questionRepository;
     private final UserRepository userRepository;
+    private final FileUploadService fileUploadService;
     private final TopicRepository topicRepository;
     private final ModelMapper modelMapper;
 
     public QuestionService(QuestionRepository questionRepository,
                            UserRepository userRepository,
+                            FileUploadService fileUploadService,
                            TopicRepository topicRepository,
                            ModelMapper modelMapper) {
         this.questionRepository = questionRepository;
         this.userRepository = userRepository;
+        this.fileUploadService = fileUploadService;
         this.topicRepository = topicRepository;
         this.modelMapper = modelMapper;
     }
@@ -40,10 +47,38 @@ public class QuestionService {
         Topic topic = topicRepository.findById(request.getTopicId())
                 .orElseThrow(() -> new EntityNotFoundException("Tema no encontrado"));
 
-        Question question = modelMapper.map(request, Question.class);
-        question.setUser(user);
+        // **🔹 Convertir deadline de UTC a Zona Horaria de Colombia**
+        ZoneId colombiaZone = ZoneId.of("America/Bogota");
+        LocalDateTime deadlineUtc = request.getDeadline(); // La fecha llega en UTC desde el cliente
+        LocalDateTime deadlineColombia = deadlineUtc.atZone(ZoneId.of("UTC"))
+                .withZoneSameInstant(colombiaZone)
+                .toLocalDateTime();
+
+        // **🔹 Validar que la fecha sea futura en Colombia**
+        if (deadlineColombia.isBefore(LocalDateTime.now(colombiaZone))) {
+            throw new IllegalArgumentException("La fecha límite debe estar en el futuro en la zona horaria de Colombia.");
+        }
+
+
+
+        Question question = new Question();
+        question.setTitle(request.getTitle());
+        question.setBody(request.getBody()); // 🔹 Ensure this is not null
+        question.setPrice(request.getPrice());
         question.setTopic(topic);
-        question.setCreatedAt(java.time.LocalDateTime.now());
+        question.setUser(user);
+        question.setDeadline(deadlineColombia);
+        question.setCreatedAt(LocalDateTime.now(colombiaZone));
+
+        // Upload Image to Cloudinary and store URL
+        if (request.getImageUrl() != null && !request.getImageUrl().isEmpty()) {
+            try {
+                String imageUrl = fileUploadService.uploadFile(request.getImageUrl());
+                question.setImageUrl(imageUrl);
+            } catch (IOException e) {
+                throw new RuntimeException("Error al subir la imagen de pregunta", e);
+            }
+        }
 
         Question savedQuestion = questionRepository.save(question);
         return modelMapper.map(savedQuestion, QuestionResponse.class);
@@ -64,10 +99,10 @@ public class QuestionService {
     }
 
     public List<QuestionResponse> getQuestionsByUser(Integer userId) {
-        List<Question> questions = questionRepository.findByUserUserId(userId);
+        List<Question> questions = questionRepository.findAllByUserUserId(userId);
         return questions.stream()
                 .map(question -> modelMapper.map(question, QuestionResponse.class))
-                .toList();
+                .collect(Collectors.toList());
     }
 
     // Retrieve all questions
